# industrial-honeypot-iot

./: CMakeLists.txt  README.md
configs/: simulated_plcs.pb
docker/: Dockerfile
proto/: plc_memory.pb.cc  plc_memory.pb.h  plc_memory.proto
server/include/: coap_server.h  modbus_server.h  soc_logger.h
server/src/: coap_server.cpp  debug_server.cpp  main.cpp  modbus_server.cpp  soc_logger.cpp
utils/: generate_plc_config  generate_plc_config.cpp  generate_simple.cpp
